Actions
Bug #8161
closedaw: this statement may fall through
Start date:
2017-05-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Building with gcc 7.1:
aw.c: In function 'filter': aw.c:287:3: error: this statement may fall through [-Werror=implicit-fallthrough=] perror("fork"); ^~~~~~~~~~~~~~ aw.c:288:2: note: here default: ^~~~~~~ aw.c: In function 'invoke': aw.c:412:3: error: this statement may fall through [-Werror=implicit-fallthrough=] perror("fork"); ^~~~~~~~~~~~~~ aw.c:413:2: note: here default: ^~~~~~~ Date: Fri May 5 14:06:12 2017 +0300 aw: this statement may fall through aw.c: In function 'filter': aw.c:287:3: error: this statement may fall through [-Werror=implicit-fallthrough=] perror("fork"); ^~~~~~~~~~~~~~ aw.c:288:2: note: here default: ^~~~~~~ aw.c: In function 'invoke': aw.c:412:3: error: this statement may fall through [-Werror=implicit-fallthrough=] perror("fork"); ^~~~~~~~~~~~~~ aw.c:413:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Toomas Soome about 5 years ago
- Category changed from cmd - userland programs to tools - gate/build tools
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4ac5eacf59e3146224496b826f32663415769c4c
commit 4ac5eacf59e3146224496b826f32663415769c4c Author: Toomas Soome <tsoome@me.com> Date: 2017-05-06T19:06:22.000Z 8161 aw: this statement may fall through Reviewed by: Jason King <jason.brian.king+illumos@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions